splits scss files for better readability, adds theme catalog block, adds fixed height for all blocks, fixes card text aligments

--- a/admin-dev/themes/new-theme/scss/pages/_themes_logo.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_themes_logo.scss
@@ -1,208 +1,8 @@
 #themes-logo-page {
-
   #adapt_theme_to_rtl_languages_theme_to_adapt {
     width: 18.75rem;
   }
 
-  .logo-configuration-card-body {
-    padding: inherit;
-
-    .logo-card {
-      border-radius: 0;
-      border: 0;
-
-      .logo-card-title {
-        font-family: OpenSans;
-        font-size: 1rem;
-        font-weight: 600;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: -0.01875rem;
-        text-align: center;
-        color: #4a4a4a;
-      }
-
-      .nav-pills {
-        .nav-item {
-          padding-right: 0.875rem;
-        }
-
-        border-top: 0;
-        border-bottom: 0;
-
-        .nav-link {
-          &.active {
-            background-color: inherit;
-          }
-
-          height: 1.375rem;
-          padding-top: 0;
-          padding-left: 0;
-          padding-right: 0;
-        }
-      }
-
-      .tab-content {
-        padding: 0;
-      }
-
-      .logo-card-description {
-        &.description-in-tab {
-          padding-top: 1.0625rem;
-        }
-
-        padding-top: 1.25rem;
-        font-family: OpenSans;
-        font-size: 0.75rem;
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: -0.0125rem;
-        color: #6c868e;
-      }
-
-      .logo-image {
-        height: 6.625rem;
-        padding-top: 2rem;
-        padding-bottom: 1.6875rem;
-      }
-    }
-
-    .logo-card:not(:last-child) {
-      border-right: 0.0625rem solid #dedede;
-    }
-  }
-
-  @mixin theme-card-overlay() {
-    width:100%;
-    height:100%;
-    position:absolute;
-    background-color:#000000;
-    opacity:0.25;
-  }
-
-  .theme-container {
-    .theme-card {
-      position: relative;
-
-      .active-card-overlay {
-        &.active {
-          display: block;
-        }
-        display: none;
-        @include theme-card-overlay;
-      }
-
-      .actions-container {
-        &.active {
-          display: block;
-        }
-        display: none;
-      }
-
-      max-width: 24.125rem;
-      max-height: 2.5rem;
-      overflow-y: hidden;
-      border-radius: 0.25rem;
-
-      img {
-        max-width: 100%;
-        height: auto;
-      }
-
-      .actions-container.active {
-        left: 30%;
-      }
-
-      .actions-container {
-        position: absolute;
-        top: 70%;
-        left: 25%;
-
-        &:first-child {
-
-        }
-
-        @mixin action-button {
-          height: 2.5rem;
-          border-radius: -0.0125rem;
-          background-color: #ffffff;
-        }
-
-        .action-button {
-          @include action-button;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: -0.0125rem;
-          text-align: center;
-          color: #363a41;
-
-          .icon-current-theme {
-            color: #25b9d7;
-          }
-        }
-
-        .delete-button {
-          @include action-button;
-          position: relative;
-          width: 2.5rem;
-          i {
-            position: absolute;
-            bottom: 25%;
-            right: 25%;
-          }
-        }
-
-        .action-button:not(:first-child):hover,
-        .delete-button:hover {
-          box-shadow: 0 0 0.9375rem 0 rgba(0, 0, 0, 0.2);
-          background-color: #3ed1f0;
-          color: #ffffff;
-        }
-      }
-    }
-
-    @mixin theme-name-and-version() {
-      font-family: OpenSans;
-      font-size: 1rem;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: -0.01875rem;
-      text-align: center;
-      color: #363a41;
-    }
-
-    .theme-name {
-      font-weight: bold;
-      @include theme-name-and-version;
-    }
-
-    .theme-version {
-      @include theme-name-and-version;
-    }
-
-    .theme-author {
-      font-family: OpenSans;
-      font-size: 0.8125rem;
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: -0.01875rem;
-      text-align: center;
-      color: #618596;
-      padding-bottom: 1.6875rem;
-    }
-  }
-
-  .theme-card:hover .active-card-overlay,
-  .theme-card:hover .actions-container
-  {
-    display: block;
-  }
+  @import "partials/theme_logo_configuration";
+  @import "partials/theme_logo_theme_card";
 }
